# iscsi-crate

./: .gitignore  AUTOMATED_TESTING_PATTERN.md  CHAP_IMPLEMENTATION.md  Cargo.toml  ERROR_MESSAGE_IMPROVEMENTS.md  GAP_ANALYSIS_FINAL.md  IMPLEMENTATION.md  INTEGRATION_TEST_RESULTS.md  NEXT_STEPS.md  PROJECT_STATUS.md  README.md  RFC3720_IMPLEMENTATION_SUMMARY.md  ROADMAP.md  RUST_TESTS.md  STATUS_CODE_COVERAGE.md  STATUS_CODE_PROGRESS.md  TEST_SUITE_README.md  auto-fix-loop.sh  capture_sense_data  capture_sense_data.c  debug_large_transfer  debug_large_transfer.c  debug_tc008.c  debug_tc008.sh  debug_test  debug_test.c  docker-setup-vsprod.sh  fix-issue.sh  implement-issue.sh  install-debug-tools.sh  remote-vm-setup.sh  run-all-tests.sh  run-auto-fix-vsprod.sh  run-implement-vsprod.sh  run-integration-tests.sh  run-tests.sh  simple_test  simple_test.c  strace_claude.sh  test-config-tgtd.toml  (+19 more)
.claude/: settings.local.json
examples/: chap_target.rs  discover_targets.rs  graceful_shutdown.rs  mutual_chap_target.rs  simple_target.rs
iscsi-test-suite/: CONTENTS.md  Makefile  README.md  TESTING_GUIDE.md  iscsi-test-plan.md
iscsi-test-suite/config/: chap_config.ini  mutual_chap_config.ini  test_config.ini
iscsi-test-suite/src/: iscsi_pdu_helper.c  iscsi_pdu_helper.h  main.c  test_commands.c  test_commands.h  test_discovery.c  test_discovery.h  (+6 more)
src/: auth.rs  client.rs  error.rs  lib.rs  pdu.rs  scsi.rs  session.rs  target.rs
test-results/: chap_results.txt  comprehensive_test_run.txt  mutual_chap_results.txt
tests/: integration_tests.rs  status_code_tests.rs
